--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,8 @@ phases:
       - cd WebApp
       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - docker ps -a
+      - echo $IMAGE_REPO_NAME:$IMAGE_TAG:$AWS_DEFAULT_REGION:$AWS_ACCOUNT_ID
   post_build:
     commands:
       - echo Build completed on `date`
