--- a/Terraform/web-app-tasks.json
+++ b/Terraform/web-app-tasks.json
@@ -1,54 +1,49 @@
 {
-    "taskDefinitionArn": "arn:aws:ecs:eu-central-1:300732800381:task-definition/web-app-tasks:4",
-    "containerDefinitions": [
+  "taskDefinitionArn": "arn:aws:ecs:eu-central-1:300732800381:task-definition/web-app-tasks:4",
+  "containerDefinitions": [
+    {
+      "name": "web-app",
+      "image": "300732800381.dkr.ecr.eu-central-1.amazonaws.com/web-app:latest",
+      "cpu": 0,
+      "portMappings": [
         {
-            "name": "web-app",
-            "image": "300732800381.dkr.ecr.eu-central-1.amazonaws.com/web-app:latest",
-            "cpu": 0,
-            "portMappings": [
-                {
-                    "containerPort": 80,
-                    "hostPort": 80,
-                    "protocol": "tcp"
-                }
-            ],
-            "essential": true,
-            "environment": [],
-            "mountPoints": [],
-            "volumesFrom": []
+          "containerPort": 80,
+          "hostPort": 80,
+          "protocol": "tcp"
         }
-    ],
-    "family": "web-app-tasks",
-    "executionRoleArn": "arn:aws:iam::300732800381:role/ecsTaskExecutionRole",
-    "networkMode": "awsvpc",
-    "revision": 4,
-    "volumes": [],
-    "status": "ACTIVE",
-    "requiresAttributes": [
-        {
-            "name": "com.amazonaws.ecs.capability.ecr-auth"
-        },
-        {
-            "name": "ecs.capability.execution-role-ecr-pull"
-        },
-        {
-            "name": "com.amazonaws.ecs.capability.docker-remote-api.1.18"
-        },
-        {
-            "name": "ecs.capability.task-eni"
-        }
-    ],
-    "placementConstraints": [],
-    "compatibilities": [
-        "EC2",
-        "FARGATE"
-    ],
-    "requiresCompatibilities": [
-        "FARGATE"
-    ],
-    "cpu": "256",
-    "memory": "512",
-    "registeredAt": "2023-11-18T08:54:49.795Z",
-    "registeredBy": "arn:aws:iam::300732800381:user/kirill",
-    "tags": []
+      ],
+      "essential": true,
+      "environment": [],
+      "mountPoints": [],
+      "volumesFrom": []
+    }
+  ],
+  "family": "web-app-tasks",
+  "executionRoleArn": "arn:aws:iam::300732800381:role/ecsTaskExecutionRole",
+  "networkMode": "awsvpc",
+  "revision": 4,
+  "volumes": [],
+  "status": "ACTIVE",
+  "requiresAttributes": [
+    {
+      "name": "com.amazonaws.ecs.capability.ecr-auth"
+    },
+    {
+      "name": "ecs.capability.execution-role-ecr-pull"
+    },
+    {
+      "name": "com.amazonaws.ecs.capability.docker-remote-api.1.18"
+    },
+    {
+      "name": "ecs.capability.task-eni"
+    }
+  ],
+  "placementConstraints": [],
+  "compatibilities": ["EC2", "FARGATE"],
+  "requiresCompatibilities": ["FARGATE"],
+  "cpu": "256",
+  "memory": "512",
+  "registeredAt": "2023-11-18T08:54:49.795Z",
+  "registeredBy": "arn:aws:iam::300732800381:user/kirill",
+  "tags": []
 }
