--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,12 +23,12 @@ phases:
       - ls -la
       - pwd
 artifacts:
-  #  files: imagedefinitions.json
-  files:
-    - "**/*"
-  base-directory: base_location
+  files: imagedefinitions.json
+  #files:
+  #  - "**/*"
+  #base-directory: base_location
   name: BuildArtif
-  discard-paths: no
+  #discard-paths: no
 #AWS_DEFAULT_REGION eu-central-1
 #AWS_ACCOUNT_ID 300732800381
 #IMAGE_TAG latest
